--- a/bilibili-lite/src/ranking/index.styl
+++ b/bilibili-lite/src/ranking/index.styl
@@ -1,4 +1,5 @@
-@-moz-document url-prefix("https://www.bilibili.com/ranking/") {
+@-moz-document url-prefix("https://www.bilibili.com/ranking/"),
+url-prefix("https://www.bilibili.com/v/popular/") {
   /* 排行榜样式 */
 	@import 'base'
 }
