--- a/bilibili-lite/src/public/background.styl
+++ b/bilibili-lite/src/public/background.styl
@@ -81,6 +81,8 @@ em:not(.icon)
 .label-item-v2-container
 .label-item-v2-2-container.label-item-v2-2-container-selected
 .article-card.v2 .meta-title .mission-mark
+.video-card .strong-tag
+.video-card .weak-tag
   border 0 !important
   background-color var(--c-accent) !important
   color var(--c-white) !important
