--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -121,6 +121,7 @@ button
 .pwp-modal-mask .pwp-modal-wrapper .pwp-btn.primary
 .common-modal-container .common-modal-content .common-modal-foot .footer-main>div div:first-child
 .upload-step-3-container-v2 .upload-3-v2-follow-btn.follow
+.back-top-btn
   position relative
   border-color var(--c-accent) !important
   background-color var(--c-accent) !important
