--- a/bilibili-lite/src/live/room.styl
+++ b/bilibili-lite/src/live/room.styl
@@ -75,6 +75,7 @@
 .live-record-card-cntr
 .week-rank-iframe
 .score-box .pk-main
+.aside-area-toggle-btn .btn-ctnr .restore-btn
 	background-color transparent !important
 
 .draw-full-cntr .function-bar.draw
@@ -109,6 +110,7 @@
 .chaos-pk-rank .rank .time
 .guard-rank-cntr .rank-cntr .tip
 .select-month
+.uname .live-skin-main-a-text
 	color var(--c-text) !important
 
 .hour-rank .hour-rank-content
@@ -122,6 +124,8 @@
 .card-detail .card-item-middle-bottom .input-contain .text
 .card-detail .card-item-middle-bottom .input-trans-contain .text
 .blpui-slider-container .slider-value
+.chat-history-panel .chat-history-list .chat-item.superChat-card-detail .card-item-middle-bottom .input-contain .text
+.chat-history-panel .chat-history-list .chat-item.superChat-card-detail .card-item-middle-bottom .input-trans-contain .text
 	color var(--c-white) !important
 
 .gift-info .btn-rule
@@ -149,6 +153,7 @@
 .end-part .award-title
 .end-part .winner-box .winner-list .winner-item span
 .blpui-slider-container .slider-marks .slider-marks-item--active
+.uname .live-skin-main-a-text:hover
 	color var(--c-accent) !important
 
 .room-introduction-tags
