--- a/bilibili-lite/src/public/background.styl
+++ b/bilibili-lite/src/public/background.styl
@@ -83,6 +83,8 @@ em:not(.icon)
 .article-card.v2 .meta-title .mission-mark
 .video-card .strong-tag
 .video-card .weak-tag
+.bangumi-item .cover-wrapper .corner-tag.badge_1
+.up-info .up-info_right .name .live-status
   border 0 !important
   background-color var(--c-accent) !important
   color var(--c-white) !important
