--- a/bilibili-lite/src/public/header.styl
+++ b/bilibili-lite/src/public/header.styl
@@ -128,6 +128,7 @@
 .lang-change .lang-item:hover
 .lang-change .lang-intro-item:hover
 .van-popper-avatar .logout a:hover
+.van-popper-avatar .logout span:hover
 	background-color var(--c-hover) !important
 
 .van-popper-avatar .level-bar .level-progress
