--- a/bilibili-lite/index.user.css
+++ b/bilibili-lite/index.user.css
@@ -2276,7 +2276,9 @@
   .label-item-v2-2-container.label-item-v2-2-container-selected,
   .article-card.v2 .meta-title .mission-mark,
   .video-card .strong-tag,
-  .video-card .weak-tag {
+  .video-card .weak-tag,
+  .bangumi-item .cover-wrapper .corner-tag.badge_1,
+  .up-info .up-info_right .name .live-status {
     border: 0 !important;
     background-color: var(--c-accent) !important;
     color: var(--c-white) !important;
@@ -2365,6 +2367,8 @@
   .article-card.v2 .meta-title .mission-mark:hover,
   .video-card .strong-tag:hover,
   .video-card .weak-tag:hover,
+  .bangumi-item .cover-wrapper .corner-tag.badge_1:hover,
+  .up-info .up-info_right .name .live-status:hover,
   .vp-container .vip p,
   span.big-vip-red p,
   em:not(.icon) p,
@@ -2449,6 +2453,8 @@
   .article-card.v2 .meta-title .mission-mark p,
   .video-card .strong-tag p,
   .video-card .weak-tag p,
+  .bangumi-item .cover-wrapper .corner-tag.badge_1 p,
+  .up-info .up-info_right .name .live-status p,
   .vp-container .vip span,
   span.big-vip-red span,
   em:not(.icon) span,
@@ -2532,7 +2538,9 @@
   .label-item-v2-2-container.label-item-v2-2-container-selected span,
   .article-card.v2 .meta-title .mission-mark span,
   .video-card .strong-tag span,
-  .video-card .weak-tag span {
+  .video-card .weak-tag span,
+  .bangumi-item .cover-wrapper .corner-tag.badge_1 span,
+  .up-info .up-info_right .name .live-status span {
     color: var(--c-white) !important;
   }
   .gg-icon,
@@ -2856,7 +2864,8 @@
   .van-popper-avatar .links .link-item:hover,
   .lang-change .lang-item:hover,
   .lang-change .lang-intro-item:hover,
-  .van-popper-avatar .logout a:hover {
+  .van-popper-avatar .logout a:hover,
+  .van-popper-avatar .logout span:hover {
     background-color: var(--c-hover) !important;
   }
   .van-popper-avatar .level-bar .level-progress,
@@ -3651,6 +3660,9 @@
   .guochuang .r-con {
     width: auto !important;
   }
+  #bili_cheese .video-card-common .card-pic {
+    height: auto;
+  }
   .focus-carousel,
   .article-card .pic {
     margin-right: 10px;
@@ -3671,7 +3683,8 @@
   #bili_guochuang .time-line .zone-list-box {
     max-height: 200px;
   }
-  #bili_anime .card-list .zone-list-box {
+  #bili_anime .card-list .zone-list-box,
+  #bili_report_cheese .zone-list-box.cheese {
     height: 460px !important;
   }
   #bili_live .zone-list-box {
@@ -3707,7 +3720,8 @@
     #bili_guochuang .time-line .zone-list-box {
       max-height: 180px;
     }
-    #bili_anime .card-list .zone-list-box {
+    #bili_anime .card-list .zone-list-box,
+    #bili_report_cheese .zone-list-box.cheese {
       height: 465px !important;
     }
     #bili_live .zone-list-box {
@@ -3760,7 +3774,8 @@
     #bili_live .zone-list-box {
       height: 477px !important;
     }
-    #bili_anime .card-list .zone-list-box {
+    #bili_anime .card-list .zone-list-box,
+    #bili_report_cheese .zone-list-box.cheese {
       max-height: 400px;
     }
     #bili_read .zone-list-box {
@@ -3790,7 +3805,8 @@
     #bili_live .zone-list-box {
       height: 380px !important;
     }
-    #bili_anime .card-list .zone-list-box {
+    #bili_anime .card-list .zone-list-box,
+    #bili_report_cheese .zone-list-box.cheese {
       max-height: 350px;
     }
     #bili_manga .manga-panel .manga-list-box {
@@ -6999,7 +7015,8 @@
   .bili-share-pc .weixin-hover .qr-before,
   .live-record-card-cntr,
   .week-rank-iframe,
-  .score-box .pk-main {
+  .score-box .pk-main,
+  .aside-area-toggle-btn .btn-ctnr .restore-btn {
     background-color: transparent !important;
   }
   .draw-full-cntr .function-bar.draw,
@@ -7033,7 +7050,8 @@
   .chaos-pk-rank .rank .season-name,
   .chaos-pk-rank .rank .time,
   .guard-rank-cntr .rank-cntr .tip,
-  .select-month {
+  .select-month,
+  .uname .live-skin-main-a-text {
     color: var(--c-text) !important;
   }
   .hour-rank .hour-rank-content,
@@ -7046,7 +7064,9 @@
   .draw-full-cntr .count,
   .card-detail .card-item-middle-bottom .input-contain .text,
   .card-detail .card-item-middle-bottom .input-trans-contain .text,
-  .blpui-slider-container .slider-value {
+  .blpui-slider-container .slider-value,
+  .chat-history-panel .chat-history-list .chat-item.superChat-card-detail .card-item-middle-bottom .input-contain .text,
+  .chat-history-panel .chat-history-list .chat-item.superChat-card-detail .card-item-middle-bottom .input-trans-contain .text {
     color: var(--c-white) !important;
   }
   .gift-info .btn-rule,
@@ -7073,7 +7093,8 @@
   .gift-panel-box .gift-reveal-header .gift-tab.active .name,
   .end-part .award-title,
   .end-part .winner-box .winner-list .winner-item span,
-  .blpui-slider-container .slider-marks .slider-marks-item--active {
+  .blpui-slider-container .slider-marks .slider-marks-item--active,
+  .uname .live-skin-main-a-text:hover {
     color: var(--c-accent) !important;
   }
   .room-introduction-tags,
