--- a/bilibili-lite/src/home/base.styl
+++ b/bilibili-lite/src/home/base.styl
@@ -69,6 +69,9 @@
 .guochuang .r-con
 	width auto !important
 
+#bili_cheese .video-card-common .card-pic
+	height auto
+
 .focus-carousel
 .article-card .pic
 	margin-right 10px
@@ -90,6 +93,7 @@
 	max-height 200px
 
 #bili_anime .card-list .zone-list-box
+#bili_report_cheese .zone-list-box.cheese
 	height 460px !important
 
 #bili_live .zone-list-box
@@ -126,6 +130,7 @@
 		max-height 180px
 
 	#bili_anime .card-list .zone-list-box
+	#bili_report_cheese .zone-list-box.cheese
 		height 465px !important
 
 	#bili_live .zone-list-box
@@ -178,6 +183,7 @@
 		height 477px !important
 
 	#bili_anime .card-list .zone-list-box
+	#bili_report_cheese .zone-list-box.cheese
 		max-height 400px
 
 	#bili_read .zone-list-box
@@ -207,6 +213,7 @@
 		height 380px !important
 
 	#bili_anime .card-list .zone-list-box
+	#bili_report_cheese .zone-list-box.cheese
 		max-height 350px
 
 	#bili_manga .manga-panel .manga-list-box
