--- a/weibo-dark/src/public.styl
+++ b/weibo-dark/src/public.styl
@@ -7,6 +7,7 @@ html
   color var(--w-main)
 
 .Feed_retweet_JqZJb
+.card-link_wrap_1ktKS
   background-color var(--vote-skin-bg-o)
 
 .Index_right_box_1-rX8
@@ -17,6 +18,9 @@ html
 
 .Index_title_3W-Ol
   color var(--c-main)
+
+.Ctrls_icon_2mxB4
+  color var(--weibo-top-nav-logo-color)
 
 .Bar_main_R1N5v
 .LeftNav_inner_tEFee
