--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -122,6 +122,7 @@ button
 .common-modal-container .common-modal-content .common-modal-foot .footer-main>div div:first-child
 .upload-step-3-container-v2 .upload-3-v2-follow-btn.follow
 .back-top-btn
+.video-toolbar .note-btn
   position relative
   border-color var(--c-accent) !important
   background-color var(--c-accent) !important
