--- a/bilibili-lite/src/public/header.styl
+++ b/bilibili-lite/src/public/header.styl
@@ -29,6 +29,7 @@
 .mini-type .nav-user-center .user-con .item .name
 .video-info .line-1
 .video-info .line-2
+.van-popper-favorite .play-all .bilifont.bili-icon_dingdao_bofang
 	color var(--c-title) !important
 
 .mini-type .nav-user-center .user-con .item .name:hover
@@ -247,6 +248,7 @@
 .van-popper-favorite .tab-item--normal:hover span
 .van-popper-favorite .tab-item--active span
 .van-popper-history .tab-item:hover
+.van-popper-favorite .play-all:hover .bilifont.bili-icon_dingdao_bofang
 	color var(--c-accent) !important
 
 .duration-tag
