--- a/bilibili-lite/src/video/base.styl
+++ b/bilibili-lite/src/video/base.styl
@@ -22,6 +22,7 @@
 .coin-dialog-mask .coin-operated
 .bui-swiper-wrap .bui-swiper-item .bui-swiper-text
 .bilibili-player-hover-items .hover-item .bg
+.mini-header__content.mini-header--login
 	background-color var(--c-background) !important
 
 .multi-page .cur-list .list-box li.on
@@ -95,6 +96,7 @@
 ul.rate-star li i
 ul.star-wrapper li i
 .video-toolbar .ops>span i
+.main-container .tool-bar .like-info i
 .main-container .tool-bar .coin-info i
 .main-container .tool-bar .share-info i
 .main-container .tool-bar .mobile-info i
@@ -145,6 +147,8 @@ ul.star-wrapper li i.icon-star-full
 .members-info .up-card .info .info-name.is-vip:hover
 .ep-list-wrapper .ep-item i
 .section-ep-wrapper .ep-item i
+.main-container .tool-bar .like-info:hover i
+.main-container .tool-bar .like-info.active i,
 .main-container .tool-bar .coin-info.active i
 .main-container .tool-bar .coin-info:hover i
 .main-container .tool-bar .share-info:hover>i
@@ -167,6 +171,8 @@ ul.star-wrapper li i.icon-star-full
 .up-info .btn-follow-up i
 .main-container .ep-list-wrapper .list-title .mode-change i:hover
 .up-info .up-info_right .name .username.is-vip:hover
+.up-info .up-info_right .name .message:hover
+.up-info .up-info_right .name .message:hover i
 	color var(--c-accent) !important
 
 .bilibili-player-feedback
