--- a/bilibili-lite/src/video/index.styl
+++ b/bilibili-lite/src/video/index.styl
@@ -6,6 +6,7 @@ url-prefix("https://www.bilibili.com/blackboard/newplayer.html"),
 url-prefix("https://www.bilibili.com/cheese/play/") {
 	/* 视频播放界面样式 */
 	@import 'base'
+	@import 'note'
 	@import 'danmaku'
 }
 @-moz-document url-prefix("https://www.bilibili.com/bangumi/media/") {
