--- a/weibo-lite/src/public/feed.styl
+++ b/weibo-lite/src/public/feed.styl
@@ -68,6 +68,8 @@ a:hover em
 .WB_text a[title]
 .WB_h5video_v2 .wbv-big-play-button:hover
 .WB_h5video_v2 .wbv-control:hover:before
+.WB_h5video_v2 .wbv-speed-panel ul li.wbv-selected .wbv-menu-item-text
+.WB_h5video_v2 .wbv-speed-panel ul li:hover .wbv-menu-item-text
   color var(--c-accent) !important
 
 .S_line1
@@ -153,7 +155,7 @@ a em
     margin 0 0 0 10px
     width 100%
 
-    li
+    li.WB_pic
       display flex
       justify-content center
       align-items center
