fix: 直播输入框

--- a/bilibili-lite/src/live/room.styl
+++ b/bilibili-lite/src/live/room.styl
@@ -15,6 +15,7 @@
 .chat-history-panel .chat-history-list .chat-item.danmaku-item.guard-level-2::before
 .chat-history-panel .chat-history-list .chat-item.danmaku-item.guard-level-1::after
 .chat-history-panel .chat-history-list .chat-item.danmaku-item.guard-level-2::after
+.chat-input-ctnr .medal-section
 	display none !important
 
 .link-footer-vm
@@ -44,6 +45,8 @@
 .bili-share-pc .share-weixin-qr
 .help-cntr
 .live-record-list-cntr
+.control-panel-ctnr
+.chat-input-ctnr
 	background-color var(--c-background) !important
 
 .attention-btn-ctnr .right-part
@@ -164,6 +167,9 @@
 .bili-share-pc
 .result-anchor-box
 .gift-panel-box .gift-reveal-header
+.chat-input-ctnr
+.gift-panel-box
+.label-box .label
 	border-color var(--c-border) !important
 
 .recharge-store-box ul.select-list .item.active
@@ -172,6 +178,7 @@
 .month-selector .month-info
 .gift-panel-box .gift-reveal-header .gift-tab.active .name
 .gift-panel-box .gift-reveal-header .gift-tab:hover .name
+.label-box .label.highlight
 	border-color var(--c-accent) !important
 
 .month-selector .month-info .month-list
@@ -196,6 +203,9 @@
 
 .common-popup-wrap.arrow-bottom::after
 	border-color var(--c-background) transparent transparent !important
+
+.side-bar-popup-cntr .arrow
+	border-color transparent transparent transparent var(--c-background) !important
 
 .common-popup-wrap.arrow-bottom::after
 	left 50%
