--- a/bilibili-lite/src/message/base.styl
+++ b/bilibili-lite/src/message/base.styl
@@ -26,6 +26,10 @@
 .list-item:hover
 	background-color var(--c-hover) !important
 
+.divider-last::before
+.divider-last::after
+	background-color var(--c-border) !important
+
 .space-left
 .space-right
 .loading .link-progress-tv
