--- a/bilibili-lite/index.user.css
+++ b/bilibili-lite/index.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           bilibili-lite
 @namespace      tolking-usercss
-@version        1.2.19
+@version        1.2.20
 @description    一个简化的bilibili页面样式，自适应黑暗模式
 @author         tolking <qw13131wang@gmail.com> (https://ououe.com)
 @homepageURL		https://github.com/tolking/usercss/tree/master/bilibili-lite
@@ -7014,7 +7014,8 @@
   .chat-history-panel .chat-history-list .chat-item.danmaku-item.guard-level-1::before,
   .chat-history-panel .chat-history-list .chat-item.danmaku-item.guard-level-2::before,
   .chat-history-panel .chat-history-list .chat-item.danmaku-item.guard-level-1::after,
-  .chat-history-panel .chat-history-list .chat-item.danmaku-item.guard-level-2::after {
+  .chat-history-panel .chat-history-list .chat-item.danmaku-item.guard-level-2::after,
+  .chat-input-ctnr .medal-section {
     display: none !important;
   }
   .link-footer-vm,
@@ -7042,7 +7043,9 @@
   #webShare .bili-share-pc,
   .bili-share-pc .share-weixin-qr,
   .help-cntr,
-  .live-record-list-cntr {
+  .live-record-list-cntr,
+  .control-panel-ctnr,
+  .chat-input-ctnr {
     background-color: var(--c-background) !important;
   }
   .attention-btn-ctnr .right-part,
@@ -7162,7 +7165,10 @@
   .edit-button,
   .bili-share-pc,
   .result-anchor-box,
-  .gift-panel-box .gift-reveal-header {
+  .gift-panel-box .gift-reveal-header,
+  .chat-input-ctnr,
+  .gift-panel-box,
+  .label-box .label {
     border-color: var(--c-border) !important;
   }
   .recharge-store-box ul.select-list .item.active,
@@ -7170,7 +7176,8 @@
   .chaos-pk-result-ctnr .result-panel .result-tab div.active,
   .month-selector .month-info,
   .gift-panel-box .gift-reveal-header .gift-tab.active .name,
-  .gift-panel-box .gift-reveal-header .gift-tab:hover .name {
+  .gift-panel-box .gift-reveal-header .gift-tab:hover .name,
+  .label-box .label.highlight {
     border-color: var(--c-accent) !important;
   }
   .month-selector .month-info .month-list {
@@ -7195,6 +7202,9 @@
   }
   .common-popup-wrap.arrow-bottom::after {
     border-color: var(--c-background) transparent transparent !important;
+  }
+  .side-bar-popup-cntr .arrow {
+    border-color: transparent transparent transparent var(--c-background) !important;
   }
   .common-popup-wrap.arrow-bottom::after {
     left: 50%;
@@ -7736,6 +7746,10 @@
   .side-bar .item:hover,
   .list-item:hover {
     background-color: var(--c-hover) !important;
+  }
+  .divider-last::before,
+  .divider-last::after {
+    background-color: var(--c-border) !important;
   }
   .space-left,
   .space-right,
