--- a/bilibili-lite/src/video/base.styl
+++ b/bilibili-lite/src/video/base.styl
@@ -82,6 +82,7 @@
 .twp-mask .twp-wrapper .twp-container .twp-text .twp-title
 .bui-swiper-wrap .bui-swiper-item .bui-swiper-text
 .bilibili-player-hover-items .hover-item .text
+.main-container .recom-wrapper .recom-list .recom-item .info-wrapper .video-title
 	color var(--c-title) !important
 
 .bilibili-player-video-bottom-area .bilibili-player-video-sendbar .bilibili-player-video-inputbar .bilibili-player-video-hint a span
@@ -110,6 +111,8 @@ ul.star-wrapper li i
 .step-fail .success-msg
 .step-status .success-msg
 .step-success .success-msg
+.main-container .recom-wrapper .recom-list .recom-item .info-wrapper .video-subtitle
+.main-container .recom-wrapper .recom-list .recom-item .info-wrapper .video-count
 	color var(--c-text) !important
 
 .bilibili-player-video-wrap a
@@ -173,6 +176,7 @@ ul.star-wrapper li i.icon-star-full
 .up-info .up-info_right .name .username.is-vip:hover
 .up-info .up-info_right .name .message:hover
 .up-info .up-info_right .name .message:hover i
+.main-container .recom-wrapper .recom-list .recom-item .info-wrapper .video-title:hover
 	color var(--c-accent) !important
 
 .bilibili-player-feedback
