--- a/bilibili-lite/src/video/danmaku.styl
+++ b/bilibili-lite/src/video/danmaku.styl
@@ -18,6 +18,7 @@
 .danmaku-wrap .player-auxiliary-area .player-auxiliary-danmaku-wrap
 .danmaku-wrap .player-auxiliary-area .player-auxiliary-danmaku-wrap .player-auxiliary-danmaku-load-status
 .danmaku-wrap .player-auxiliary-area .player-auxiliary-danmaku-btn-footer
+.player-auxiliary-area .player-auxiliary-collapse .bui-collapse-body
 	background-color transparent !important
 
 .player-auxiliary-area .player-auxiliary-filter-title
