--- a/bilibili-lite/src/public/comment.styl
+++ b/bilibili-lite/src/public/comment.styl
@@ -14,6 +14,10 @@
 .comment-bilibili-fold .comment-list .list-item .reply-box .view-more .btn-more:hover
 .bb-comment .no-login .baffle
 .comment-bilibili-fold .no-login .baffle
+.bb-comment .comment-send.comment-send-lite
+.comment-bilibili-fold .comment-send.comment-send-lite
+.bb-comment .comment-send-lite.comment-send-lite
+.comment-bilibili-fold .comment-send-lite.comment-send-lite
 	background-color var(--c-background) !important
 
 .emoji-box .emoji-tabs .tab-link.on
@@ -92,6 +96,10 @@
 .panel-area .bb-comment .bottom-page.center
 .reply-item
 .comment-bilibili-con .t
+.bb-comment .comment-send .comment-emoji
+.comment-bilibili-fold .comment-send .comment-emoji
+.bb-comment .comment-send-lite .comment-emoji
+.comment-bilibili-fold .comment-send-lite .comment-emoji
 	border-color var(--c-border) !important
 
 .bb-comment .no-login .baffle
@@ -112,7 +120,17 @@
 .comment-bilibili-fold .comment-list .list-item .con .vote-container:hover .text-area
 .comment .comment-selecotr
 .comment .comment-hot-item-user-content
+.bb-comment .comment-send .comment-emoji
+.comment-bilibili-fold .comment-send .comment-emoji
+.bb-comment .comment-send-lite .comment-emoji
+.comment-bilibili-fold .comment-send-lite .comment-emoji
 	box-shadow none
+	
+.bb-comment .comment-send.comment-send-lite
+.comment-bilibili-fold .comment-send.comment-send-lite
+.bb-comment .comment-send-lite.comment-send-lite
+.comment-bilibili-fold .comment-send-lite.comment-send-lite
+	box-shadow 0 -1px 4px var(--c-hover)
 
 .bb-comment .comment-header .tabs-order li.on:after
 .comment-bilibili-fold .comment-header .tabs-order li.on:after
@@ -120,6 +138,11 @@
 
 .replies-comment-input-wrapper .replies-upload .comment-input-img
 	text-indent 0 !important
+
+.bb-comment .comment-send-lite .comment-submit
+.comment-bilibili-fold .comment-send-lite .comment-submit
+	position relative !important
+	right 0 !important
 
 .bb-comment .comment-header .tabs-order li.on
 .comment-bilibili-fold .comment-header .tabs-order li.on
