--- a/bilibili-lite/src/video/base.styl
+++ b/bilibili-lite/src/video/base.styl
@@ -47,6 +47,7 @@
 .bui-switch .bui-body
 .bui-slider .bui-track.bui-track-video-progress .bui-bar-wrap .bui-bar-buffer
 .bilibili-player-video-bottom-area:before
+.recommend-list .split-line
 	background-color var(--c-border) !important
 
 .bilibili-player em
