--- a/bilibili-lite/src/video/note.styl
+++ b/bilibili-lite/src/video/note.styl
@@ -2,8 +2,12 @@
 .resizable-component
 .resize-box .note-drag-bar
 .video-editor
-.ql-snow .ql-picker-options
+.ql-snow .ql-picker-
+.resizable-component .note-drag-bar
   background-color var(--c-background)
+
+.resizable-component .close-btn
+  background-color var(--c-hover)
 
 .ql-toolbar
 .ql-container.ql-snow
